--- a/package.json
+++ b/package.json
@@ -1,47 +1,53 @@
 {
-  "name": "chronogg",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node dist/server",
-    "clean": "rm -rf dist",
-    "build": "npm -s run clean && npm -s run generate && tsc",
-    "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
-    "generate:prisma": "prisma2 generate",
-    "generate:nexus": "ts-node --transpile-only src/schema",
-    "postinstall": "npm -s run generate",
-    "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/server",
-    "studio": "prisma2 studio --experimental"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "^2.0.0-preview021",
-    "@types/lodash": "^4.14.149",
-    "@types/node-fetch": "^2.5.4",
-    "apollo-server": "^2.10.1",
-    "bcryptjs": "^2.4.3",
-    "express": "^4.17.1",
-    "graphql": "^14.6.0",
-    "graphql-middleware": "^4.0.2",
-    "graphql-shield": "^7.0.12",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "nexus": "^0.12.0-rc.11",
-    "nexus-prisma": "^0.9.1"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^8.3.7",
-    "@types/node": "^13.7.1",
-    "prisma2": "^2.0.0-preview021",
-    "ts-node": "^8.6.2",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.7.5"
-  },
-  "engines": {
-    "node": ">=10.0.0"
-  }
+    "name": "chronogg",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node dist/server",
+        "clean": "rm -rf dist",
+        "build": "npm -s run clean && npm -s run generate && tsc",
+        "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
+        "generate:prisma": "prisma2 generate",
+        "generate:nexus": "ts-node --transpile-only src/schema",
+        "postinstall": "npm -s run generate",
+        "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/server",
+        "studio": "prisma2 studio --experimental"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@prisma/client": "^2.0.0-preview021",
+        "@types/lodash": "^4.14.149",
+        "@types/node-fetch": "^2.5.4",
+        "apollo-server": "^2.10.1",
+        "bcryptjs": "^2.4.3",
+        "express": "^4.17.1",
+        "graphql": "^14.6.0",
+        "graphql-middleware": "^4.0.2",
+        "graphql-shield": "^7.0.12",
+        "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.15",
+        "nexus": "^0.12.0-rc.11",
+        "nexus-prisma": "^0.9.1"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/jsonwebtoken": "^8.3.7",
+        "@types/node": "^13.7.1",
+        "@typescript-eslint/eslint-plugin": "^2.20.0",
+        "@typescript-eslint/parser": "^2.20.0",
+        "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-prettier": "^3.1.2",
+        "prettier": "^1.19.1",
+        "prisma2": "^2.0.0-preview021",
+        "ts-node": "^8.6.2",
+        "ts-node-dev": "^1.0.0-pre.44",
+        "typescript": "^3.7.5"
+    },
+    "engines": {
+        "node": ">=10.0.0"
+    }
 }
