--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
         "generate:prisma": "prisma2 generate",
         "generate:nexus": "ts-node --transpile-only src/schema",
+        "seed": "ts-node src/seed.ts",
         "postinstall": "npm -s run generate",
         "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/server",
         "studio": "prisma2 studio --experimental"
